--- a/project_2.ipynb
+++ b/project_2.ipynb
@@ -507,15 +507,16 @@
           "base_uri": "https://localhost:8080/",
           "height": 86
         },
-        "outputId": "1ea45198-4a2e-4a8d-aef9-7b18af8a0e88"
+        "outputId": "8c6d23bb-e177-4ca0-d3a1-22068889cef9"
       },
       "cell_type": "code",
       "source": [
         "# Extra experiment to find the best order poly\n",
-        "NUM_TRIALS = 50\n",
+        "NUM_TRIALS = 100\n",
         "for degree in [1, 2]:\n",
         "    r2 = 0\n",
-        "    for trial in range(NUM_TRIALS):\n",
+        "    for _ in range(NUM_TRIALS):\n",
+        "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, shuffle=True)\n",
         "        poly = PolynomialFeatures(degree)\n",
         "        X_train_poly = poly.fit_transform(X_train)\n",
         "        X_test_poly = poly.fit_transform(X_test)\n",
@@ -527,14 +528,14 @@
         "    print('R^2 degree ' + str(degree) +  ' RidgeCV: ', str((r2/NUM_TRIALS)))\n",
         "    print('Alpha for degree ' + str(degree) + ' RidgeCV: ', ridge_cv.alpha_)"
       ],
-      "execution_count": 9,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "R^2 degree 1 RidgeCV:  0.3228668247850914\n",
+            "R^2 degree 1 RidgeCV:  0.33193124902790694\n",
             "Alpha for degree 1 RidgeCV:  0.02\n",
-            "R^2 degree 2 RidgeCV:  0.30866469808473157\n",
+            "R^2 degree 2 RidgeCV:  0.33777362116300785\n",
             "Alpha for degree 2 RidgeCV:  0.002\n"
           ],
           "name": "stdout"
@@ -548,7 +549,9 @@
       },
       "cell_type": "markdown",
       "source": [
-        "<p>TODO: Analysis</p>"
+        "<p>To check which order Polynomial we wanted to use we went ahead and ran a iterative test. When we first ran this we were checking both third and fourth order polynomials as well, but they took a lot longer and yielded worse $R^{2}$ consitently. We found that each time we ran this our answer would change. We see more often than not the 1st order has a higher  $R^{2}$ than our 2nd order, but it seems to jump between the two, their $R^{2}$ are always very similar though with not a lot of deviation. </p><br>\n",
+        "\n",
+        "<p>Ultimately we're not sure which one to pick as it's hard to visualize whatever this thing is in 19 demensions. If we could, we'd pick the model that better fit our dataset via observation. During our expedition through string theory we also tried to remove the visiual outliers from the data that seemed to be constant throughout(IE: wage>200). This didn't have much positive effect on the model.</p>"
       ]
     }
   ]
